--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -15,6 +15,7 @@ resources.db.params.username = root
 resources.db.params.password = softjourn
 resources.db.params.dbname   = tenbrain_z
 resources.db.params.isDefaultTableAdapter = true
+resources.view[] =
 ; ------------------------------------------
 ; Facebook
 ; ------------------------------------------
