sample commit to test out github-bamboo integration

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -9,11 +9,11 @@ resources.frontController.controllerDirectory = APPLICATION_PATH "/controllers"
 resources.frontController.params.displayExceptions = 0
 show_errors = true
 resources.db.adapter = "pdo_mysql"
-resources.db.params.host = phpmyadmin.sjua
+resources.db.params.host = ec2-50-17-28-29.compute-1.amazonaws.com
 resources.db.params.port = 3306
-resources.db.params.username = root
-resources.db.params.password = softjourn
-resources.db.params.dbname   = tenbrain_z
+resources.db.params.username = tenbrain
+resources.db.params.password = tenbrain
+resources.db.params.dbname   = tenbrain
 resources.db.params.isDefaultTableAdapter = true
 resources.view[] =
 ; ------------------------------------------
