started using Zend_Layout

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -16,6 +16,7 @@ resources.db.params.password = tenbrain
 resources.db.params.dbname   = tenbrain
 resources.db.params.isDefaultTableAdapter = true
 resources.view[] =
+resources.layout.layoutPath = APPLICATION_PATH "/layouts/scripts"
 ; ------------------------------------------
 ; Facebook
 ; ------------------------------------------
