using Layout with Auth pages

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -9,7 +9,7 @@ resources.frontController.controllerDirectory = APPLICATION_PATH "/controllers"
 resources.frontController.params.displayExceptions = 0
 show_errors = true
 resources.db.adapter = "pdo_mysql"
-resources.db.params.host = ec2-50-17-28-29.compute-1.amazonaws.com
+resources.db.params.host = 50.19.94.209
 resources.db.params.port = 3306
 resources.db.params.username = tenbrain
 resources.db.params.password = tenbrain
@@ -23,6 +23,11 @@ resources.layout.layoutPath = APPLICATION_PATH "/layouts/scripts"
 facebook.appId = "216749851687368"
 facebook.secret = "9dc8240a3c0a7284d547a2e659d012bf"
 facebook.permissions = "email,offline_access"
+; ------------------------------------------
+; reCaptcha
+; ------------------------------------------
+recaptcha.pubkey = "6LcTaMQSAAAAAAO0DUjDPkY37wxF5oG4ncth29Bt"
+recaptcha.privkey = "6LcTaMQSAAAAAHS4o5iZQQ-D3aR1stxyYqIemh4i"
 
 [staging : production]
 
