Added Facebook/Twitter Auth

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -9,25 +9,32 @@ resources.frontController.controllerDirectory = APPLICATION_PATH "/controllers"
 resources.frontController.params.displayExceptions = 0
 show_errors = true
 resources.db.adapter = "pdo_mysql"
-resources.db.params.host = 50.19.94.209
+resources.db.params.host = phpmyadmin.sjua
 resources.db.params.port = 3306
-resources.db.params.username = tenbrain
-resources.db.params.password = tenbrain
-resources.db.params.dbname   = tenbrain
+resources.db.params.username = root
+resources.db.params.password = softjourn
+resources.db.params.dbname   = tenbrain_z
 resources.db.params.isDefaultTableAdapter = true
 resources.view[] =
 resources.layout.layoutPath = APPLICATION_PATH "/layouts/scripts"
 ; ------------------------------------------
 ; Facebook
 ; ------------------------------------------
-facebook.appId = "216749851687368"
-facebook.secret = "9dc8240a3c0a7284d547a2e659d012bf"
+facebook.appId = "145803268825232"
+facebook.secret = "32fd2bdaea213f5b0a31ccd80fd5c9f0"
 facebook.permissions = "email,offline_access"
 ; ------------------------------------------
 ; reCaptcha
 ; ------------------------------------------
 recaptcha.pubkey = "6LcTaMQSAAAAAAO0DUjDPkY37wxF5oG4ncth29Bt"
 recaptcha.privkey = "6LcTaMQSAAAAAHS4o5iZQQ-D3aR1stxyYqIemh4i"
+; ------------------------------------------
+; Twitter
+; ------------------------------------------
+twitter.callbackUrl = "http://ten.com/auth/twittercallback"
+twitter.siteUrl = "http://twitter.com/oauth"
+twitter.consumerKey = "7y2kZ14TW9ypGdKVQeypgQ"
+twitter.consumerSecret = "pwN1cW9QYr0hamzbsEhgSPrXEHMtT2uAim6bDk36ms"
 
 [staging : production]
 
