Reworked Facebook/Twitter Auth

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -22,7 +22,8 @@ resources.layout.layoutPath = APPLICATION_PATH "/layouts/scripts"
 ; ------------------------------------------
 facebook.appId = "145803268825232"
 facebook.secret = "32fd2bdaea213f5b0a31ccd80fd5c9f0"
-facebook.permissions = "email,offline_access"
+facebook.permissions = "email,offline_access,user_about_me"
+facebook.redirect_uri = "http://ten.com/auth/facebookconnect"
 ; ------------------------------------------
 ; reCaptcha
 ; ------------------------------------------
