Fixed some bugs Changed urls format

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -11,9 +11,9 @@ show_errors = true
 resources.db.adapter = "pdo_mysql"
 resources.db.params.host = phpmyadmin.sjua
 resources.db.params.port = 3306
-resources.db.params.username = root
-resources.db.params.password = softjourn
-resources.db.params.dbname   = tenbrain_z
+resources.db.params.username = tenbrain
+resources.db.params.password = tenbrain
+resources.db.params.dbname   = tenbrain
 resources.db.params.isDefaultTableAdapter = true
 resources.view[] =
 resources.layout.layoutPath = APPLICATION_PATH "/layouts/scripts"
@@ -32,10 +32,10 @@ recaptcha.privkey = "6LcTaMQSAAAAAHS4o5iZQQ-D3aR1stxyYqIemh4i"
 ; ------------------------------------------
 ; Twitter
 ; ------------------------------------------
-twitter.callbackUrl = "http://ten.com/auth/twittercallback"
+twitter.callbackUrl = "http://ten.com/account/twitter_callback"
 twitter.siteUrl = "http://twitter.com/oauth"
-twitter.consumerKey = "7y2kZ14TW9ypGdKVQeypgQ"
-twitter.consumerSecret = "pwN1cW9QYr0hamzbsEhgSPrXEHMtT2uAim6bDk36ms"
+twitter.consumerKey = "FJ02HgxKEIOngBI8Q0h9PA"
+twitter.consumerSecret = "lNt7u2GJ7qbPgQ34TwaZe9g2HW7YKrrqOB1lDoztvk"
 
 [staging : production]
 
