added paypal database model

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -13,7 +13,7 @@ resources.db.params.host = phpmyadmin.sjua
 resources.db.params.port = 3306
 resources.db.params.username = tenbrain
 resources.db.params.password = tenbrain
-resources.db.params.dbname   = tenbrain
+resources.db.params.dbname   = tenbrain_z
 resources.db.params.isDefaultTableAdapter = true
 resources.view[] =
 resources.layout.layoutPath = APPLICATION_PATH "/layouts/scripts"
